crates/plotnik-lib/tests/03-analyze/anchors/boundary_anchor_in_branch_sequence_needs_node.txt
Q = [
  {
    .
    (a)
  }
  (c)
]
------------------ DIAGNOSTICS -------------------
error: anchor needs an enclosing node
 --> query.ptk:3:5
  |
3 |     .
  |     ^
  |
help: wrap in a named node: `(parent . (child))`
-------------------- SYMBOLS ---------------------
